Fix Java9 options for nodetool